--- a/BACKEND/loggenerator/Jenkinsfile
+++ b/BACKEND/loggenerator/Jenkinsfile
@@ -105,6 +105,7 @@ pipeline {
                     bat 'docker ps -a'
                 }
             }
+			archiveArtifacts artifacts: 'log/*.txt', followSymlinks: false
         }
     }
 }
