change in generator code for log file if size become more than 10 mb

--- a/BACKEND/loggenerator/src/main/resources/application.properties
+++ b/BACKEND/loggenerator/src/main/resources/application.properties
@@ -17,6 +17,6 @@ logging.level.org.springframework.security: DEBUG
 #spring.jpa.show-sql=true
 
 logfoldername=log
-logfilename=app-logs.txt
+logfilename=app-logs.log
 external.service.url=http://localhost:8780/logs
 
