--- a/BACKEND/loglistenercollector/src/main/resources/application.properties
+++ b/BACKEND/loglistenercollector/src/main/resources/application.properties
@@ -24,7 +24,7 @@ logging.level.org.springframework.web=DEBUG
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 logfoldername=log
-logfilename=app-logs.txt
+#logfilename=app-logs.txt
 infourl=http://localhost:8783/info
 errorurl=http://localhost:8782/error
 warnurl=http://localhost:8784/warn
