--- a/BACKEND/loginfopersistor/src/main/resources/application.properties
+++ b/BACKEND/loginfopersistor/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=user-service
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/logdata
 spring.datasource.username=postgres
-spring.datasource.password=tiger
+spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
