--- a/BACKEND/logerrorpersistor/src/main/resources/application.properties
+++ b/BACKEND/logerrorpersistor/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=user-service
 # PostgreSQL connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/logdata
 spring.datasource.username=postgres
-spring.datasource.password=tiger
+spring.datasource.password=postgres
 
 # Hibernate JPA
 spring.jpa.hibernate.ddl-auto=update
