--- a/FRONTEND/Jenkinsfile
+++ b/FRONTEND/Jenkinsfile
@@ -2,50 +2,34 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_IMAGE = "log-processing-ui"
-        DOCKER_TAG = "latest"
-        CONTAINER_NAME = "log-processing-ui"
-        HOST_PORT = "3000"
-        CONTAINER_PORT = "80"
+        APP_NAME = 'frontend-reactjs'
+        DOCKER_COMPOSE_FILE = 'docker-compose.yml'
     }
 
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'dev',
-                    url: 'https://github.com/vivekgshan/Log-Processing.git'
+                // Clone your repo containing ReactJS and docker-compose.yml
+                git 'https://github.com/vivekgshan/Log-Processing.git'
             }
         }
-
-        stage('Build Docker Image') {
+        stage('Build') {
             steps {
-                dir('FRONTEND') {
-                    sh "docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} ."
-                }
+                // Build ReactJS app
+                sh 'npm install'
+                sh 'npm run build'
             }
         }
-
-        stage('Deploy to EC2') {
+        stage('Docker Compose Up') {
             steps {
-                script {
-                    sh """
-                        echo "Stopping old container if running..."
-                        docker rm -f ${CONTAINER_NAME} || true
-
-                        echo "Starting new container..."
-                        docker run -d -p ${HOST_PORT}:${CONTAINER_PORT} --name ${CONTAINER_NAME} ${DOCKER_IMAGE}:${DOCKER_TAG}
-                    """
-                }
+                // Deploy using Docker Compose
+                sh "docker-compose -f ${DOCKER_COMPOSE_FILE} up -d --build"
             }
         }
     }
-
     post {
-        success {
-            echo "✅ Deployment successful! UI is live at http://<EC2-Public-IP>:${HOST_PORT}"
-        }
-        failure {
-            echo "❌ Deployment failed. Check Jenkins logs."
+        always {
+            echo "Deployment stage completed"
         }
     }
 }
