--- a/FRONTEND/Jenkinsfile
+++ b/FRONTEND/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_REGISTRY = "srini341" // Replace with your DockerHub username
+        DOCKER_REGISTRY = "srini314" // Replace with your DockerHub username
         FRONTEND_IMAGE = "${DOCKER_REGISTRY}/log-processing-frontend"
         BACKEND_IMAGE  = "${DOCKER_REGISTRY}/log-processing-backend"
         TAG = "latest"
@@ -38,16 +38,18 @@ pipeline {
         }
 
         stage('Build Backend') {
-            steps {
-                dir('BACKEND/logvampersistor') {
-                    sh """
-                        mvn clean package -DskipTests
-                        docker build -t ${BACKEND_IMAGE}:${TAG} .
-                        docker push ${BACKEND_IMAGE}:${TAG}
-                    """
-                }
-            }
-        }
+			agent {
+				docker {
+					image 'maven:3.9.4-eclipse-temurin-17'
+				}
+			}
+			steps {
+				dir('BACKEND/logvampersistor') {
+					sh 'mvn clean package -DskipTests'
+				}
+			}
+		}
+
 
         stage('Trivy Scan') {
             steps {
