--- a/FRONTEND/Jenkinsfile
+++ b/FRONTEND/Jenkinsfile
@@ -38,17 +38,16 @@ pipeline {
         }
 
         stage('Build Backend') {
-			agent {
-				docker {
-					image 'maven:3.9.4-eclipse-temurin-17'
-				}
-			}
-			steps {
-				dir('BACKEND/logvampersistor') {
-					sh 'mvn clean package -DskipTests'
-				}
-			}
-		}
+            steps {
+                dir('BACKEND/logvampersistor') {
+                    sh """
+                        mvn clean package -DskipTests
+                        docker build -t ${BACKEND_IMAGE}:${TAG} .
+                        docker push ${BACKEND_IMAGE}:${TAG}
+                    """
+                }
+            }
+        }
 
 
         stage('Trivy Scan') {
