--- a/FRONTEND/Jenkinsfile
+++ b/FRONTEND/Jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
 
         stage('Build Backend') {
             steps {
-                dir('BACKEND/logvampersistor') {
+                dir('BACKEND/logwarnpersistor') {
                     sh """
                         mvn clean package -DskipTests
                         docker build -t ${BACKEND_IMAGE}:${TAG} .
