--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
 
   db:
@@ -18,7 +16,7 @@ services:
     restart: always
 
   logcreator:
-    image: nikhilgujela/logcreator:latest
+    image: 675169530083.dkr.ecr.ca-central-1.amazonaws.com/logcreator:latest
     container_name: logcreator
     ports:
       - "9096:8080"
@@ -33,7 +31,7 @@ services:
     restart: always
 
   loggenerator:
-    image: nikhilgujela/loggenerator:latest
+    image: 675169530083.dkr.ecr.ca-central-1.amazonaws.com/loggenerator:latest
     container_name: loggenerator
     ports:
       - "8780:8080"
@@ -48,7 +46,7 @@ services:
     restart: always
 
   loglistenercollector:
-    image: nikhilgujela/loglistenercollector:latest
+    image: 675169530083.dkr.ecr.ca-central-1.amazonaws.com/loglistenercollector:latest
     container_name: loglistenercollector
     ports:
       - "8785:8080"
@@ -59,13 +57,13 @@ services:
     depends_on:
       - db
     volumes:
-      - ./shared_logs:/app/logs  # Mount shared log folder (if needed)
+      - ./shared_logs:/app/logs
     networks:
       - lognet
     restart: always
 
   loginfopersistor:
-    image: nikhilgujela/loginfopersistor:latest
+    image: 675169530083.dkr.ecr.ca-central-1.amazonaws.com/loginfopersistor:latest
     container_name: loginfopersistor
     ports:
       - "8783:8080"
@@ -80,7 +78,7 @@ services:
     restart: always
 
   logwarnpersistor:
-    image: nikhilgujela/logwarnpersistor:latest
+    image: 675169530083.dkr.ecr.ca-central-1.amazonaws.com/logwarnpersistor:latest
     container_name: logwarnpersistor
     ports:
       - "8784:8080"
@@ -95,7 +93,7 @@ services:
     restart: always
 
   logdebugpersistor:
-    image: nikhilgujela/logdebugpersistor:latest
+    image: 675169530083.dkr.ecr.ca-central-1.amazonaws.com/logdebugpersistor:latest
     container_name: logdebugpersistor
     ports:
       - "8781:8080"
@@ -110,7 +108,7 @@ services:
     restart: always
 
   logerrorpersistor:
-    image: nikhilgujela/logerrorpersistor:latest
+    image: 675169530083.dkr.ecr.ca-central-1.amazonaws.com/logerrorpersistor:latest
     container_name: logerrorpersistor
     ports:
       - "8782:8080"
@@ -125,7 +123,7 @@ services:
     restart: always
 
   loganalyser:
-    image: nikhilgujela/loganalyser:latest
+    image: 675169530083.dkr.ecr.ca-central-1.amazonaws.com/loganalyser:latest
     container_name: loganalyser
     ports:
       - "8086:8080"
@@ -140,7 +138,7 @@ services:
     restart: always
 
   logexport:
-    image: nikhilgujela/logexport:latest
+    image: 675169530083.dkr.ecr.ca-central-1.amazonaws.com/logexport:latest
     container_name: logexport
     ports:
       - "9097:8080"
@@ -155,7 +153,7 @@ services:
     restart: always
 
   frontend:
-    image: nikhilgujela/log-processing-frontend:latest
+    image: 675169530083.dkr.ecr.ca-central-1.amazonaws.com/log-processing-frontend:latest
     container_name: log-processing-frontend
     ports:
       - "3001:80"
@@ -167,7 +165,7 @@ services:
 
 volumes:
   pgdata:
-  shared_logs:  # Named volume only if you prefer Docker-managed instead of ./shared_logs folder
+  shared_logs:
 
 networks:
   lognet:
