--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,64 +1,118 @@
+version: "3.8"
+
 services:
 
-  logcreator:
-    ports:
-      - "9096:9096"
+  db:
+    image: postgres:15-alpine
+    container_name: log-processing-postgres
     environment:
-      server.port: 9096
-    # other configs
-
-  loggenerator:
+      POSTGRES_DB: logdb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: tiger
     ports:
-      - "8780:8780"
-    environment:
-      server.port: 8780
-    # other configs
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    networks:
+      - lognet
+    restart: always
 
   loglistenercollector:
+    image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/loglistenercollector:${IMAGE_TAG}
+    container_name: loglistenercollector
     ports:
-      - "8785:8785"
+      - "8785:8080"
     environment:
-      server.port: 8785
-    # other configs
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/logdb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: tiger
+    volumes:
+      - ./shared_logs:/app/logs
+    depends_on:
+      - db
+    networks:
+      - lognet
+    restart: always
 
   loginfopersistor:
+    image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/loginfopersistor:${IMAGE_TAG}
+    container_name: loginfopersistor
     ports:
-      - "8783:8783"
+      - "8783:8080"
     environment:
-      server.port: 8783
-    # other configs
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/logdb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: tiger
+    depends_on:
+      - db
+    networks:
+      - lognet
+    restart: always
 
   logwarnpersistor:
+    image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/logwarnpersistor:${IMAGE_TAG}
+    container_name: logwarnpersistor
     ports:
-      - "8784:8784"
+      - "8784:8080"
     environment:
-      server.port: 8784
-    # other configs
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/logdb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: tiger
+    depends_on:
+      - db
+    networks:
+      - lognet
+    restart: always
 
   logdebugpersistor:
+    image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/logdebugpersistor:${IMAGE_TAG}
+    container_name: logdebugpersistor
     ports:
-      - "8781:8781"
+      - "8781:8080"
     environment:
-      server.port: 8781
-    # other configs
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/logdb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: tiger
+    depends_on:
+      - db
+    networks:
+      - lognet
+    restart: always
 
   logerrorpersistor:
+    image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/logerrorpersistor:${IMAGE_TAG}
+    container_name: logerrorpersistor
     ports:
-      - "8782:8782"
+      - "8782:8080"
     environment:
-      server.port: 8782
-    # other configs
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/logdb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: tiger
+    depends_on:
+      - db
+    networks:
+      - lognet
+    restart: always
 
-  loganalyser:
+  frontend:
+    image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/frontend:${IMAGE_TAG}
+    container_name: log-processing-frontend
     ports:
-      - "8086:8086"
-    environment:
-      server.port: 8086
-    # other configs
+      - "3001:80"
+    depends_on:
+      - loglistenercollector
+      - loginfopersistor
+      - logwarnpersistor
+      - logdebugpersistor
+      - logerrorpersistor
+    networks:
+      - lognet
+    restart: always
 
-  logexport:
-    ports:
-      - "9097:9097"
-    environment:
-      server.port: 9097
-    # other configs
+volumes:
+  pgdata:
+  shared_logs:
+
+networks:
+  lognet:
+    driver: bridge
