--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,12 @@ services:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/loglistenercollector:${IMAGE_TAG}
     container_name: loglistenercollector
     ports:
-      - "8785:8081"
+      - "8785:8785"
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/logdata
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+      SERVER_PORT: 8785
     volumes:
       - ./shared_logs:/app/logs
     depends_on:
@@ -38,11 +39,12 @@ services:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/loginfopersistor:${IMAGE_TAG}
     container_name: loginfopersistor
     ports:
-      - "8783:8081"
+      - "8783:8783"
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/logdata
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+      SERVER_PORT: 8783
     depends_on:
       - db
     networks:
@@ -53,11 +55,12 @@ services:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/logwarnpersistor:${IMAGE_TAG}
     container_name: logwarnpersistor
     ports:
-      - "8784:8081"
+      - "8784:8784"
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/logdata
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+      SERVER_PORT: 8784
     depends_on:
       - db
     networks:
@@ -68,11 +71,12 @@ services:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/logdebugpersistor:${IMAGE_TAG}
     container_name: logdebugpersistor
     ports:
-      - "8781:8081"
+      - "8781:8781"
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/logdata
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+      SERVER_PORT: 8781
     depends_on:
       - db
     networks:
@@ -83,11 +87,12 @@ services:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/logerrorpersistor:${IMAGE_TAG}
     container_name: logerrorpersistor
     ports:
-      - "8782:8081"
+      - "8782:8782"
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/logdata
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+      SERVER_PORT: 8782
     depends_on:
       - db
     networks:
