--- a/BACKEND/logwarnpersistor/pom.xml
+++ b/BACKEND/logwarnpersistor/pom.xml
@@ -78,7 +78,7 @@
 		</dependency>
 	</dependencies>
 
-	<build>
+	<!--<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -107,6 +107,15 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+		</plugins>
+	</build>-->
+	
+		<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
