--- a/FRONTEND/Dockerfile
+++ b/FRONTEND/Dockerfile
@@ -15,4 +15,4 @@ RUN npm run build
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "/bin/sh", "/pip-app.sh","daemon off;"]
