--- a/BACKEND/loginfopersistor/pom.xml
+++ b/BACKEND/loginfopersistor/pom.xml
@@ -97,7 +97,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>com.loginfopersister.LogInfoPersistorApplication</mainClass>
+					<mainClass>com.loginfopersistor.LogInfoPersistorApplication</mainClass>
 				</configuration>
 				<executions>
 					<execution>
