--- a/BACKEND/loginfopersistor/Dockerfile
+++ b/BACKEND/loginfopersistor/Dockerfile
@@ -1,18 +1,13 @@
-Step 1: Build
-FROM node:18 AS build
+# Stage 1: Build JAR using Maven
+FROM maven:3.9.6-eclipse-temurin-17 AS builder
 WORKDIR /app
-COPY package*.json ./
-
-# Install deps cleanly
-RUN npm install
-# Add fix for ajv / ajv-keywords mismatch
-RUN npm install ajv@^6.12.6 ajv-keywords@^3.5.2 --save-dev
-
-COPY . .
-RUN npm run build
-
-# Step 2: Serve with Nginx
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+COPY pom.xml .
+RUN mvn dependency:go-offline
+COPY src ./src
+RUN mvn clean package -DskipTests
+# Stage 2: Create lightweight image for running
+FROM eclipse-temurin:17-jdk-alpine
+WORKDIR /app
+COPY --from=builder /app/target/*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
