--- a/BACKEND/loginfopersistor/Jenkinsfile
+++ b/BACKEND/loginfopersistor/Jenkinsfile
@@ -2,70 +2,75 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_REGISTRY = "sumanthmurari"
-        FRONTEND_IMAGE = "${DOCKER_REGISTRY}/loginfo-backend"
-        TAG = "latest"
+        DOCKER_REGISTRY = "sumanthmurari"      // DockerHub username
+        IMAGE_NAME = "loginfo-processing-ui"
         HOST_PORT = "3000"
-        CONTAINER_PORT = "81"
-        EC2_PUBLIC_IP = "your.ec2.public.ip" // Replace with actual IP or DNS
+        CONTAINER_PORT = "80"
+        CONTAINER_NAME = "loginfo-processing-ui"
     }
 
     stages {
         stage('Checkout') {
             steps {
-                checkout scm
+                git branch: 'loginfo4',
+                    url: 'https://github.com/vivekgshan/Log-Processing.git'
             }
         }
 
-        stage('Docker Login') {
+        stage('Build Docker Image') {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'dockerhub-cred', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
-                    sh 'echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin'
+                script {
+                    // Get Git commit short hash for tagging
+                    COMMIT_ID = sh(script: "git rev-parse --short HEAD", returnStdout: true).trim()
+                    DOCKER_TAG = "${COMMIT_ID}"
+
+                    dir('FRONTEND') {
+                        sh """
+                            echo "Building Docker image..."
+                            docker build -t ${DOCKER_REGISTRY}/${IMAGE_NAME}:${DOCKER_TAG} \
+                                         -t ${DOCKER_REGISTRY}/${IMAGE_NAME}:latest .
+                        """
+                    }
                 }
             }
         }
 
-        stage('Build & Push Frontend') {
-            steps {
-                sh """
-                    docker build -t ${FRONTEND_IMAGE}:${TAG} ./FRONTEND
-                    docker push ${FRONTEND_IMAGE}:${TAG}
-                """
-            }
-        }
-
-        stage('Trivy Scan Frontend') {
-            steps {
-                sh """
-                    echo "Scanning frontend image..."
-                    trivy image --exit-code 0 --severity HIGH ${FRONTEND_IMAGE}:${TAG}
-                    trivy image --format table --output trivy-frontend-report.txt ${FRONTEND_IMAGE}:${TAG}
-                """
-            }
-        }
-
-        stage('Deploy with Docker Compose') {
+        stage('Push Docker Image') {
             steps {
                 script {
-                    sh 'docker-compose -f FRONTEND/docker-compose.yml down'
-                    sh 'docker-compose -f FRONTEND/docker-compose.yml up -d --build'
-
+                    withCredentials([usernamePassword(credentialsId: 'docker', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                        sh 'echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin'
+                        sh "docker push ${DOCKER_REGISTRY}/${IMAGE_NAME}:${DOCKER_TAG}"
+                        sh "docker push ${DOCKER_REGISTRY}/${IMAGE_NAME}:latest"
                     }
+                }
+            }
+        }
+
+        stage('Deploy to EC2') {
+            steps {
+                script {
+                    sh """
+                        echo "Stopping old container if running..."
+                        docker rm -f ${CONTAINER_NAME} || true
+
+                        echo "Pulling latest image..."
+                        docker pull ${DOCKER_REGISTRY}/${IMAGE_NAME}:latest
+
+                        echo "Starting new container..."
+                        docker run -d -p ${HOST_PORT}:${CONTAINER_PORT} --name ${CONTAINER_NAME} ${DOCKER_REGISTRY}/${IMAGE_NAME}:latest
+                    """
+                }
             }
         }
     }
 
     post {
-        always {
-            sh 'docker logout || true'
-            archiveArtifacts artifacts: 'trivy-frontend-report.txt', fingerprint: true
-            echo "Pipeline finished"
-        }
         success {
-            echo "✅ Frontend deployed! Access it at: http://${EC2_PUBLIC_IP}:${HOST_PORT}"
+            echo "✅ Deployment successful! UI is live at http://<EC2-Public-IP>:${HOST_PORT}"
         }
         failure {
-            echo "❌ Deployment failed. Check Jenkins logs for details."
+            echo "❌ Deployment failed. Check Jenkins logs."
         }
     }
 }
