--- a/BACKEND/logcollector/Dockerfile
+++ b/BACKEND/logcollector/Dockerfile
@@ -4,7 +4,7 @@ FROM openjdk:17-jdk-slim
 # Set the working directory inside the container
 WORKDIR /app
 RUN ls
-COPY target/llogcollector-0.0.1-SNAPSHOT.jar app.jar
+COPY target/logcollector-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8785
 
