--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
 
   db:
     image: postgres:15-alpine
-    container_name: log-processing-postgres
     environment:
       POSTGRES_DB: logdata
       POSTGRES_USER: postgres
@@ -12,14 +11,18 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - /home/ubuntu/log_volume/pgdata:/var/lib/postgresql/data
     networks:
-      - lognet
+      - logprocessing_net
     restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d logdata"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  loglistenercollector:
+  logcollector:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/logcollector:${IMAGE_TAG}
-    container_name: logcollector
     ports:
       - "8789:8789"
     environment:
@@ -28,16 +31,16 @@ services:
       SPRING_DATASOURCE_PASSWORD: postgres
       SERVER_PORT: 8789
     volumes:
-      - ./shared_logs:/app/logs
+      - /home/ubuntu/log_volume/shared_logs:/app/logs
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
-      - lognet
+      - logprocessing_net
     restart: always
 
   loginfopersistor:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/loginfopersistor:${IMAGE_TAG}
-    container_name: loginfopersistor
     ports:
       - "8783:8783"
     environment:
@@ -46,14 +49,14 @@ services:
       SPRING_DATASOURCE_PASSWORD: postgres
       SERVER_PORT: 8783
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
-      - lognet
+      - logprocessing_net
     restart: always
 
   logwarnpersistor:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/logwarnpersistor:${IMAGE_TAG}
-    container_name: logwarnpersistor
     ports:
       - "8784:8784"
     environment:
@@ -62,14 +65,14 @@ services:
       SPRING_DATASOURCE_PASSWORD: postgres
       SERVER_PORT: 8784
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
-      - lognet
+      - logprocessing_net
     restart: always
 
   logdebugpersistor:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/logdebugpersistor:${IMAGE_TAG}
-    container_name: logdebugpersistor
     ports:
       - "8781:8781"
     environment:
@@ -78,14 +81,14 @@ services:
       SPRING_DATASOURCE_PASSWORD: postgres
       SERVER_PORT: 8781
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
-      - lognet
+      - logprocessing_net
     restart: always
 
   logerrorpersistor:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/logerrorpersistor:${IMAGE_TAG}
-    container_name: logerrorpersistor
     ports:
       - "8782:8782"
     environment:
@@ -94,14 +97,14 @@ services:
       SPRING_DATASOURCE_PASSWORD: postgres
       SERVER_PORT: 8782
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
-      - lognet
+      - logprocessing_net
     restart: always
 
   frontend:
     image: ${ECR_ACCOUNT}.dkr.ecr.${AWS_REGION}.amazonaws.com/frontend:${IMAGE_TAG}
-    container_name: log-processing-frontend
     ports:
       - "3001:80"
     depends_on:
@@ -111,7 +114,7 @@ services:
       - logdebugpersistor
       - logerrorpersistor
     networks:
-      - lognet
+      - logprocessing_net
     restart: always
 
 volumes:
@@ -119,5 +122,5 @@ volumes:
   shared_logs:
 
 networks:
-  lognet:
+  logprocessing_net:
     driver: bridge
