--- a/BACKEND/docker-compose.yml
+++ b/BACKEND/docker-compose.yml
@@ -1,23 +1,30 @@
 version: "3.9"
 
 services:
-  loggenerator2:
+  loggenerator:
     image: loggenerator:latest
-    container_name: loggenerator2
+    container_name: loggenerator
     ports:
-      - "8780:8780"               # loggenerator exposed on host:8780
+      - "8780:8780"
+    volumes:
+      - shared-logs:/root/log     # loggenerator writes logs here
     networks:
       - lognet
 
-  loglistener3:
-    image: loglistener
-    container_name: loglistener2
+  loglistener:
+    image: loglistener:latest
+    container_name: loglistener
     ports:
-      - "8785:8785"               # loglistener exposed on host:8785
+      - "8785:8785"
     depends_on:
-      - loggenerator2
+      - loggenerator
+    volumes:
+      - shared-logs:/root/log              # loglistener reads same logs here
     networks:
       - lognet
+
+volumes:
+  shared-logs:                          # declare named volume
 
 networks:
   lognet:
