--- a/BACKEND/logcollector/Dockerfile
+++ b/BACKEND/logcollector/Dockerfile
@@ -1,12 +1,14 @@
-# Use an official OpenJDK image from the Docker Hub
-FROM openjdk:17-jdk-slim
-
-# Set the working directory inside the container
+# Stage 1: Build JAR using Maven
+FROM maven:3.9.6-eclipse-temurin-17 AS builder
 WORKDIR /app
-RUN ls
-COPY target/logcollector-0.0.1-SNAPSHOT.jar app.jar
+COPY pom.xml .
+RUN mvn dependency:go-offline
+COPY src ./src
+RUN mvn clean package -DskipTests
 
+# Stage 2: Create lightweight image for running
+FROM eclipse-temurin:17-jdk-alpine
+WORKDIR /app
+COPY --from=builder /app/target/logcollector-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8789
-
-# Command to run the jar file
-CMD ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
