--- a/BACKEND/logcollector/src/main/resources/application.properties
+++ b/BACKEND/logcollector/src/main/resources/application.properties
@@ -27,7 +27,13 @@ logging.level.org.springframework.web=DEBUG
 #springdoc.swagger-ui.path=/swagger-ui.html
 logfoldername=log
 #logfilename=app-logs.txt
-infourl=http://localhost:8783/info
-errorurl=http://localhost:8782/error
-warnurl=http://localhost:8784/warn
-debugurl=http://localhost:8781/debug
+#infourl=http://localhost:8783/info
+#errorurl=http://localhost:8782/error
+#warnurl=http://localhost:8784/warn
+#debugurl=http://localhost:8781/debug
+
+infourl=${LOG_INFO_PERSISTOR_URL}
+errorurl=${LOG_ERROR_PERSISTOR_URL}
+warnurl=${LOG_WARN_PERSISTOR_URL}
+debugurl=${LOG_DEBUG_PERSISTOR_URL}
+
