--- a/BACKEND/loganalyser/pom.xml
+++ b/BACKEND/loganalyser/pom.xml
@@ -20,6 +20,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- pom.xml -->
+<dependency>
+  <groupId>io.micrometer</groupId>
+  <artifactId>micrometer-registry-prometheus</artifactId>
+</dependency>
+
 		<!-- Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
