--- a/BACKEND/loglistener/src/main/resources/application.properties
+++ b/BACKEND/loglistener/src/main/resources/application.properties
@@ -32,3 +32,7 @@ warnurl=http://localhost:8784/warn
 debugurl=http://localhost:8781/debug
 
 log.collectorurl=http://13.201.68.212:8789/collector
+
+management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoint.prometheus.enabled=true
+
