--- a/BACKEND/loggenerator/src/main/resources/application.properties
+++ b/BACKEND/loggenerator/src/main/resources/application.properties
@@ -20,3 +20,7 @@ logfoldername=log
 logfilename=app-logs.log
 external.service.url=http://localhost:8780/logs
 
+management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoint.prometheus.enabled=true
+
+
