--- a/Deployment-genlis/docker-compose-monitoring.yml
+++ b/Deployment-genlis/docker-compose-monitoring.yml
@@ -31,6 +31,7 @@ services:
       - "3000:3000"
     volumes:
       - grafana-storage:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
     networks:
       - monitor-net
 
