--- a/Deployment-genlis/docker-compose-monitoring.yml
+++ b/Deployment-genlis/docker-compose-monitoring.yml
@@ -24,6 +24,22 @@ services:
     networks:
       - monitor-net
 
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    ports:
+      - "9100:9100"
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--path.rootfs=/rootfs'
+    networks:
+      - monitor-net    
+
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
