--- a/Deployment-genlis/grafana/provisioning/dashboards/unified-infra-app-dashboard.json
+++ b/Deployment-genlis/grafana/provisioning/dashboards/unified-infra-app-dashboard.json
@@ -1,27 +1,140 @@
 {
-  "title": "Unified Infra + App Dashboard",
+  "title": "LogProcessing App Monitoring Dashboard",
   "uid": "infra-app-unified",
   "tags": ["springboot", "docker", "node_exporter", "unified"],
   "schemaVersion": 30,
+  "style": "dark",
+  "time": { "from": "now-30m", "to": "now" },
+  "timezone": "browser",
   "panels": [
     {
       "title": "Host CPU Usage (%)",
       "type": "timeseries",
       "targets": [
-        { "expr": "100 - (avg by (instance) (rate(node_cpu_seconds_total{mode=\"idle\"}[5m])) * 100)", "legendFormat": "{{instance}}" }
+        {
+          "expr": "100 - (avg by (instance) (rate(node_cpu_seconds_total{mode=\"idle\"}[5m])) * 100)",
+          "legendFormat": "{{instance}}"
+        }
       ],
       "gridPos": { "h": 6, "w": 12, "x": 0, "y": 0 }
+    },
+    {
+      "title": "Host Memory Usage",
+      "type": "timeseries",
+      "targets": [
+        {
+          "expr": "node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes",
+          "legendFormat": "{{instance}}"
+        }
+      ],
+      "gridPos": { "h": 6, "w": 12, "x": 12, "y": 0 }
+    },
+    {
+      "title": "Host Disk Space Available",
+      "type": "timeseries",
+      "targets": [
+        {
+          "expr": "node_filesystem_avail_bytes{mountpoint=\"/\"}",
+          "legendFormat": "{{instance}}"
+        }
+      ],
+      "gridPos": { "h": 6, "w": 12, "x": 0, "y": 6 }
+    },
+    {
+      "title": "Host Network Traffic (RX/TX)",
+      "type": "timeseries",
+      "targets": [
+        {
+          "expr": "rate(node_network_receive_bytes_total[5m])",
+          "legendFormat": "RX {{instance}}"
+        },
+        {
+          "expr": "rate(node_network_transmit_bytes_total[5m])",
+          "legendFormat": "TX {{instance}}"
+        }
+      ],
+      "gridPos": { "h": 6, "w": 12, "x": 12, "y": 6 }
     },
     {
       "title": "Container CPU Usage (%)",
       "type": "timeseries",
       "targets": [
-        { "expr": "rate(container_cpu_usage_seconds_total{container_label_com_docker_compose_service=~\"loggenerator|loglistener\"}[2m]) * 100", "legendFormat": "{{container_label_com_docker_compose_service}}" }
+        {
+          "expr": "rate(container_cpu_usage_seconds_total{container_label_com_docker_compose_service=~\"loggenerator|loglistener\"}[2m]) * 100",
+          "legendFormat": "{{container_label_com_docker_compose_service}}"
+        }
       ],
-      "gridPos": { "h": 6, "w": 12, "x": 12, "y": 0 }
+      "gridPos": { "h": 6, "w": 12, "x": 0, "y": 12 }
+    },
+    {
+      "title": "Container Memory Usage",
+      "type": "timeseries",
+      "targets": [
+        {
+          "expr": "container_memory_usage_bytes{container_label_com_docker_compose_service=~\"loggenerator|loglistener\"}",
+          "legendFormat": "{{container_label_com_docker_compose_service}}"
+        }
+      ],
+      "gridPos": { "h": 6, "w": 12, "x": 12, "y": 12 }
+    },
+    {
+      "title": "Container Network I/O",
+      "type": "timeseries",
+      "targets": [
+        {
+          "expr": "rate(container_network_receive_bytes_total{container_label_com_docker_compose_service=~\"loggenerator|loglistener\"}[2m])",
+          "legendFormat": "RX {{container_label_com_docker_compose_service}}"
+        },
+        {
+          "expr": "rate(container_network_transmit_bytes_total{container_label_com_docker_compose_service=~\"loggenerator|loglistener\"}[2m])",
+          "legendFormat": "TX {{container_label_com_docker_compose_service}}"
+        }
+      ],
+      "gridPos": { "h": 6, "w": 24, "x": 0, "y": 18 }
+    },
+    {
+      "title": "JVM Heap Memory Used",
+      "type": "timeseries",
+      "targets": [
+        {
+          "expr": "jvm_memory_used_bytes{job=~\"loggenerator|loglistener\", area=\"heap\"}",
+          "legendFormat": "{{job}}"
+        }
+      ],
+      "gridPos": { "h": 6, "w": 12, "x": 0, "y": 24 }
+    },
+    {
+      "title": "Active JVM Threads",
+      "type": "timeseries",
+      "targets": [
+        {
+          "expr": "jvm_threads_live_threads{job=~\"loggenerator|loglistener\"}",
+          "legendFormat": "{{job}}"
+        }
+      ],
+      "gridPos": { "h": 6, "w": 12, "x": 12, "y": 24 }
+    },
+    {
+      "title": "HTTP Requests Per Second",
+      "type": "timeseries",
+      "targets": [
+        {
+          "expr": "rate(http_server_requests_seconds_count{job=~\"loggenerator|loglistener\"}[1m])",
+          "legendFormat": "{{job}} {{status}}"
+        }
+      ],
+      "gridPos": { "h": 6, "w": 12, "x": 0, "y": 30 }
+    },
+    {
+      "title": "HTTP Request Latency (95th Percentile)",
+      "type": "timeseries",
+      "targets": [
+        {
+          "expr": "histogram_quantile(0.95, sum(rate(http_server_requests_seconds_bucket{job=~\"loggenerator|loglistener\"}[5m])) by (le, job))",
+          "legendFormat": "{{job}}"
+        }
+      ],
+      "gridPos": { "h": 6, "w": 12, "x": 12, "y": 30 }
     }
-  ],
-  "time": { "from": "now-30m", "to": "now" },
-  "timezone": "browser",
-  "style": "dark"
+  ]
 }
